# switchboard

./: .gitignore  .pre-commit-config.yaml  BACKLOG.md  C001-RESOLUTION.md  C001-TASK.md  CI-INVESTIGATION.md  CI_FAILURES.md  CI_FIXED.md  CI_STATUS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LC003-plan.md  LC004-plan.md  LC006-plan.md  LOG_CLEANUP_TODO.md  PLAN-2.md  PLAN-3.md  PLAN-4.md  PLAN-INDEX.md  PLAN-ORIGINAL.md  PLAN.md  README.md  SCOPE-ANALYSIS.md  SCOPE-RESULT.md  SCOPE-SPLIT.md  T002-plan.md  T003-plan.md  T004-plan.md  T005-plan.md  T007-plan.md  T009-plan.md  T009-results.md  T011-plan.md  T012-plan.md  T012-results.md  T013-plan.md  T013-results.md  T014-plan.md  (+73 more)
.cargo/: config.toml
.github/workflows/: ci.yml
.github/workflows/bench/: bench-ci.yml
.github/workflows/benches/: README.md
benches/: BENCHMARK_REPORT.md  bench_utils.rs  logging_benchmarks.rs  manual_benchmark.rs  simple_benchmark.rs
docs/: DEVELOPMENT_PHILOSOPHY_APPENDIX_RUST.md
docs/philosophy/: ARCHITECTURE_GUIDELINES.md  CODING_STANDARDS.md  CORE_PRINCIPLES.md  DOCUMENTATION_APPROACH.md  TESTING_STRATEGY.md
hooks/: check_file_length.py  pre-commit
src/: config.rs  fs_utils.rs  lib.rs  log_cleanup.rs  logger.rs  main.rs  openai_adapter.rs  proxy_handler.rs  test_clippy_error.rs  test_format_error.rs
src/logger/: environment.rs  error.rs  init.rs  mod.rs  path_resolver.rs
templates/: post-commit.template
tests/: CONFIG_HELPERS_README.md  cleanup_logs.sh  common_utils_test.rs  config_error_test.rs  config_helper_test.rs  config_openai_test.rs  config_test.rs  directory_creation_test.rs  environment_detection_test.rs  environment_log_paths_test.rs  failing_test.rs  log_cleanup_test.rs  log_directory_structure_test.rs  log_separation_test.rs  logger_body_test.rs  logger_directory_test.rs  logger_file_test.rs  logger_level_test.rs  logger_stdout_test.rs  non_rust_test.md  path_resolution_test.rs  proxy_integration_tests.rs  temp_failing_test.rs  test_log_utilities_test.rs  verify_permissions_test.rs
tests/common/: config_helpers.rs  mod.rs
tests/linecounts/: debug_test.rs  test_1000.rs  test_1001.rs  test_499.rs  test_500.rs  test_501.rs  test_999.rs
tools/: install_post_commit_hook.sh  migrate_logs.sh
