[package]
name = "switchboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "switchboard"
path = "src/lib.rs"

[[bin]]
name = "switchboard"
path = "src/main.rs"

[[bin]]
name = "manual_benchmark"
path = "benches/manual_benchmark.rs"

[[bin]]
name = "simple_benchmark"
path = "benches/simple_benchmark.rs"

[[bench]]
name = "logging_benchmarks"
harness = false  # Tell Rust to use Criterion's harness instead of the built-in one

[dependencies]
# NOTE: These versions are specified based on PLAN.md Section 4.2
# The exact versions may need adjustment based on the actual Rust version used for building.
# Current specified versions target compatibility with rustc 1.68.1 but some transitive dependencies
# require newer Rust versions. Further version adjustments or a Rust update may be needed.
tokio = { version = "1.32.0", features = ["full"] }
axum = { version = "0.6.20", features = ["http2", "json", "macros"] }
reqwest = { version = "0.11.20", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
tracing-appender = "0.2.2"
uuid = { version = "1.4.1", features = ["v4"] }
http = "0.2.9"
hyper = { version = "0.14.27", features = ["server", "http1", "http2"] }
bytes = "1.4.0"
futures-util = "0.3.28"
dotenvy = "0.15.7"
thiserror = "1.0.48"
libc = "0.2.153"
directories = "6.0.0"
clap = { version = "4.4.6", features = ["derive", "cargo"] }
filetime = "0.2.21"  # For manipulating file timestamps in tests
chrono = "0.4.31"  # For date handling in log cleanup

[dev-dependencies]
# Testing dependencies for integration tests
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
serde_json = "1.0.107"  # Match the version used in main dependencies
axum = { version = "0.6.20" }  # Match the version used in main dependencies
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
uuid = { version = "1.4.1", features = ["v4"] }  # Match the version used in main dependencies
tempfile = "3.8"
chrono = "0.4.31"  # For date formatting in tests
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }  # For benchmarking
